# RemoteSensing-VLM-for-change-detection-segmentation-and-VQA

./: README.md  build_json.py  diagnostic.py  infer.py  pyproject.toml  requirements.txt  test.py  train.py  vqa.py
src/florence_bitemporal/: __init__.py  cli.py  config.py  diagnostics.py  evaluation.py  metrics.py  utils.py  visualization.py
src/florence_bitemporal/data/: __init__.py  builders.py  cdvqa.py  dataset.py  levir.py
src/florence_bitemporal/model/: __init__.py  florence.py  fusion.py
src/florence_bitemporal/training/: __init__.py  loop.py  optimizer.py
